fixes alignment issue

--- a/src/css/information_section.css
+++ b/src/css/information_section.css
@@ -84,6 +84,9 @@
                 vertical-align: top;
                 margin-left: 5%;
             }
+            .linksContainerPlain {
+                vertical-align: inherit;
+            }
         }
     }
 }
